--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PatriScan",
+  "name": "patriscan",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -9,38 +9,60 @@
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint"
+    "lint": "eslint",
+    "cap:sync": "npm run build && npx cap sync",
+    "cap:android": "npm run build && npx cap sync android && npx cap open android",
+    "cap:ios": "npm run build && npx cap sync ios && npx cap open ios"
   },
   "dependencies": {
+    "@awesome-cordova-plugins/barcode-scanner": "^8.0.2",
+    "@capacitor-community/sqlite": "^7.0.0",
+    "@capacitor/android": "7.4.2",
     "@capacitor/app": "7.0.0",
-    "@capacitor/core": "7.0.1",
+    "@capacitor/barcode-scanner": "^2.0.3",
+    "@capacitor/camera": "^7.0.1",
+    "@capacitor/core": "^7.4.2",
+    "@capacitor/filesystem": "^7.1.4",
+    "@capacitor/geolocation": "^7.1.4",
     "@capacitor/haptics": "7.0.0",
     "@capacitor/keyboard": "7.0.0",
+    "@capacitor/share": "^7.0.1",
     "@capacitor/status-bar": "7.0.0",
-    "@ionic/react": "^8.0.0",
-    "@ionic/react-router": "^8.0.0",
-    "@types/react-router": "^5.1.20",
-    "@types/react-router-dom": "^5.3.3",
+    "@capawesome/capacitor-file-picker": "^7.2.0",
+    "@ionic/pwa-elements": "^3.3.0",
+    "@ionic/react": "^8.7.1",
+    "@ionic/react-router": "^8.7.1",
     "ionicons": "^7.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^5.3.4",
+    "papaparse": "^5.5.3",
+    "pdf-lib": "^1.17.1",
+    "pdfjs": "^2.5.4",
+    "pdfjs-dist": "^5.4.54",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
-    "@capacitor/cli": "7.0.1",
+    "@capacitor/cli": "^7.4.2",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/papaparse": "^5.3.16",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "cypress": "^13.5.0",
-    "eslint": "^8.35.0",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jsdom": "^22.1.0",
+    "prettier": "^3.6.2",
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
     "vite": "^5.4.14",
